Updated app name

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 
 
     <title>
-      BE Assignment Junior
+    Commutatus Splitwise
     </title><%= render 'layouts/header_layout' %>
   </head><% if ['sessions' , 'registrations'].include?(controller_name)
  %><body class="text-center">
