Added hardcode password for add new friend

--- a/app/views/dashboards/_friend_list.html.erb
+++ b/app/views/dashboards/_friend_list.html.erb
@@ -2,6 +2,7 @@
     <div class="friends-list">
       <p class="friends-list-header">FRIENDS</p> 
        <button class="btn btn-primary" data-bs-target="#friendModal" data-bs-toggle="modal" type="button">Add Friends</button>
+      <div class="height400">
       <% if !@friend_list.nil? && !@friend_list.blank? %>
         <%@friend_list.each do |friend|%>
             <a class="friend-name"><%=friend.name%></a>
@@ -9,5 +10,6 @@
       <%else%>
            <a class="friend-name">No record</a>
       <%end%>
+      </div>
     </div>
 </aside>
