--- a/app/views/dashboards/_settle_up_modal.html.erb
+++ b/app/views/dashboards/_settle_up_modal.html.erb
@@ -23,7 +23,7 @@
 
                                 <div class="col-md-6 enter_contact_box">
                                     <label for="" class="form-label"> Amount $ </label>
-                                    <input type="text" class="form-control" name="amount_paid" id="amount_paid" pattern="[0-9]+" disabled> 
+                                    <input type="text" class="form-control" name="amount_paid" id="amount_paid" pattern="[0-9]+" readonly> 
                                 </div>
                                 
                             </div>
