--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -5,7 +5,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
 <div class="dashboard-wrapper">
   <%= render :partial => 'friend_list' %>
-  <div class="main-area">
+  <div class="main-area" style="margin-right:24px;">
     <div class="top-bar">
       <h1 class="top-bar-title">Dashboard</h1>
       <div class="top-bar-actions">
@@ -38,8 +38,8 @@
                       <img alt="profile" class="user-img" src="https://cdn.icon-icons.com/icons2/1378/PNG/512/avatardefault_92824.png" />
                       <div class="user-info">
                         <p><%=user_owe_obj.name%></p>
-                        <p>owes you $ <%=user_owe_obj.shared_amount%></p>
-                        <p>From expense <%=user_owe_obj.exp_name%></p>
+                        <p>Owes you : $ <%=user_owe_obj.shared_amount%></p>
+                        <p>Expense :  <%=user_owe_obj.exp_name%></p>
                       </div>
                     </div>
                 <%end%>
@@ -56,8 +56,8 @@
                       <img alt="profile" class="user-img" src="https://cdn.icon-icons.com/icons2/1378/PNG/512/avatardefault_92824.png" />
                       <div class="user-info">
                         <p><%=user_owed_obj.name%></p>
-                        <p>owes you $<%=user_owed_obj.shared_amount%></p>
-                        <p>From expense <%=user_owed_obj.exp_name%></p>
+                        <p>Owes you :  $<%=user_owed_obj.shared_amount%></p>
+                        <p>Expense : <%=user_owed_obj.exp_name%></p>
                       </div>
                     </div>
                 <%end%>
@@ -68,8 +68,10 @@
       </div>
     </div>
   </div>
+  <%= render :partial => 'expense_list' %>
 </div>
-
+<div id="expense_content">
+</div>
 <%= render :partial => 'add_expense_modal' %>
 <%= render :partial => 'add_friend_modal' %>
 <%= render :partial => 'settle_up_modal' %>
